syntax = "proto3";
package GrpcEngine;

option go_package = "proto/Grpc/engine;GrpcEngine";

import "google/protobuf/timestamp.proto";

message Decimal {
  int64 Val = 1;
  int32 Exp = 2;
}

message FetchOrderRequest {
  string market = 1;
  string side = 2;
  bytes uuid = 3;
  Decimal price = 4;
}

message FetchOrderResponse {
  bytes uuid = 1;
  int64 member_id = 2;
  string symbol = 3;
  string side = 4;
  string type = 5;
  Decimal price = 6;
  Decimal stop_price = 7;
  Decimal filled_quantity = 8;
  bool cancelled = 9;
  google.protobuf.Timestamp created_at = 10;
}

message BookOrder {
  repeated Decimal price_quantity = 1;
}

message FetchOrderBookRequest {
  string market = 1;
  int64 limit = 2;
}

message FetchOrderBookResponse {
  string market = 1;
  repeated BookOrder Bids = 2;
  repeated BookOrder Asks = 3;
  int64 sequence = 4;
}

message CalcMarketOrderRequest {
  string market = 1;
  string side = 2;
  Decimal quantity = 3;
  Decimal volume = 4;
}

message CalcMarketOrderResponse {
  Decimal quantity = 1;
  Decimal locked = 2;
}

message FetchMarketPriceRequest {
  string market = 1;
}

message FetchMarketPriceResponse {
  Decimal price = 1;
}

service MatchingEngineService {
  rpc FetchOrder(FetchOrderRequest) returns (FetchOrderResponse) {}
  rpc FetchOrderBook(FetchOrderBookRequest) returns (FetchOrderBookResponse) {}
  rpc CalcMarketOrder(CalcMarketOrderRequest) returns (CalcMarketOrderResponse) {}
  rpc FetchMarketPrice(FetchMarketPriceRequest) returns (FetchMarketPriceResponse) {}
}
